--- a/grid.css
+++ b/grid.css
@@ -37,7 +37,7 @@ a:visited{
 }
 .header img{
     display: flex;
-    width: 40vw;
+    width: 100%;
     flex-direction: column;
     align-items: center;
 }
@@ -123,6 +123,9 @@ main  p {
     display: flex;
     justify-content: center;
     margin:2rem;
+}
+.steam{
+    width: 15rem;
 }
 
 footer{
