--- a/grid.css
+++ b/grid.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
 }
+
 html, body{
     height: 100%;
 }
@@ -26,7 +27,21 @@ a:link{
 a:visited{
     text-decoration: none;
 }
-
+.header2{
+    position: relative ;
+    height: 50vh;
+    display: flex  ;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.header2 img{
+    display: flex;
+    width: 100%;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+}
 .header{
     position: relative ;
     height: 100vh;
@@ -38,23 +53,57 @@ a:visited{
 .header img{
     display: flex;
     width: 100%;
+    position: relative;
     flex-direction: column;
     align-items: center;
 }
 
 .navigation{
     justify-content: flex-end;
-    background: rgba(27, 65, 114, 0.85);
-    color: red;
     position: relative ;
     text-align: center;
     display: flex  ;
     
+    
+}
+.buttoncontainer img{
+
+
+    width: 25vw;
+
+}
+.buttoncontainer{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+
+    
+}
+.navhover:hover .navigation{
+     background: round rgba(27, 65, 114, 1);
+}
+
+.navhover:hover .navigation a{
+    padding-left: 1vw;
+    padding-right: 2vw;
+    color: #f04a50;
+    font-size: large;
+   
+   
 }
 .navigation a{
     padding-left: 1vw;
     padding-right: 2vw;
-    color: red;
+    color: #f04a4f00;
+    font-size: large;
+    
+   
+}
+
+.navigation a:hover{
+    padding-left: 1vw;
+    padding-right: 2vw;
+    color: #a14e4e;
    
 }
 
@@ -68,16 +117,36 @@ a:visited{
     
 }
 main{
-    background: rgba(27, 65, 114, 0.30);
+    background: #263454;
     color:white;
     position: relative;
     padding: 1rem;
-    padding-bottom: 5rem;  
     
+    
+}
+.openNav{
+    padding: 2vw;
+    font-size: 3vw;
+    color: white;
+    display: flex;
+    justify-content: flex-start;
+    position: relative;
+    top: 2vh;
+}
+.openNav:hover{
+    color: black;
+}
+.mainimg{
+    position: relative;
+    height: 100%;
 }
 main h2{
     display: flex;
     justify-content: center;
+}
+main h1{
+    display: flex;
+    justify-content: center;  
 }
 main  p {
             max-width: 80vw;
@@ -89,14 +158,14 @@ main  p {
 .img-gallery{
     display: grid;
     grid-template-columns: 10% 35% 10% 35% 10% ;
-    grid-template-rows: 25% 12.5% 25% 12.5% 25% 
+    grid-template-rows: 25% 12.5% 25% 12.5% 25%;
 }
 .img1{
     display: grid;
     grid-area: 1 / 2 / 1 / 3;
     justify-self: stretch ;
     width: 100%;
-    border: solid rgba(27, 65, 114, 0.75) 0.5vw;
+    border: solid #4a658a 0.3vw;
    
   
 }
@@ -105,24 +174,33 @@ main  p {
     grid-area: 1 / 4 / 1 / 5 ;
     justify-self: stretch ;
     width: 100%;
-    border: solid rgba(27, 65, 114, 0.75)0.5vw;
+    border: solid #4a658a 0.3vw;
    
   
 }
-.img3{
-    display: grid;
-    grid-area: 3 / 2 / 3 / 5 ;
-    justify-self: stretch ;
-    width: 100%;
-    border: solid rgba(27, 65, 114, 0.75) 0.5vw;
-   
-  
-}
-.steam-flex{
-    position: relative ;
+.iframe-flex{
     display: flex;
     justify-content: center;
-    margin-top:8rem;
+    padding:10%;
+
+}
+.img3{
+    border: solid #4a658a 0.3vw;
+    min-height: 50vh;
+    min-width: 50vw;
+}
+@media only screen and (max-width: 768px) {
+    .img3{
+        min-height: 100%;
+        min-width: 100%;
+    }
+}
+
+
+.steam-flex{
+    position: static ;
+    display: flex;
+    justify-content: center;
 }
 .steam{
     width: 15rem;
@@ -134,7 +212,8 @@ footer{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: rgba(41, 42, 41, 0.85);
+    background: #d63a4a;
+    padding:0;
     
 }
 footer img{ 
@@ -144,3 +223,68 @@ footer img{
 
    
 }
+.sidenav{
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index:1;
+    top:0;
+    left:0;
+    background-color: #e0bd9f;
+    overflow-x:hidden;
+    padding-top: 10vh;
+    transition: 0.5s;
+}
+.sidenav a{
+    padding: 2vw 2vw 2vw 3vw;
+    text-decoration: none;
+    font-size: 2vw;
+    color:#f04a50;
+    display: block;
+    transition: 0.3s;
+}
+.sidenav a:hover{
+    color:#a14e4e;
+}
+.sidenav .closebtn{
+    position: absolute;
+    top:0;
+    right: 5vw;
+    font-size: 3vw;
+    margin-left: 5vw;
+}
+#main{
+    transition: margin-left .5s;
+}
+.aboutus-grid{
+    display: grid;
+    grid-template-columns: repeat(5,1fr) ;
+    grid-template-rows: repeat(3,1fr);
+    padding: 5%;
+}
+.pers1{
+    grid-area: 1 / 1 / 2 / 2;
+}
+.pers2{
+    grid-area: 1 / 3 / 2 / 4;
+}
+.pers3{
+    grid-area: 1 / 5 / 2 / 5;
+}
+.pers4{
+    grid-area: 2 / 1 / 3 / 2;
+}
+.pers5{
+    grid-area: 2 / 3 / 3 / 4;
+}
+
+.pers6{
+    grid-area: 2 / 5 / 3 / 6;
+}
+.pers7{
+    grid-area: 3 / 2 / 4 / 3;
+}
+.pers8{
+    grid-area: 3 / 4 / 4 / 5;
+}
+
