--- a/grid.css
+++ b/grid.css
@@ -50,12 +50,17 @@ a:visited{
     align-items: center;
     justify-content: center;
 }
+#main{
+    margin:0;
+    padding:0;
+}
 .header img{
     display: flex;
     width: 100%;
     position: relative;
     flex-direction: column;
     align-items: center;
+
 }
 
 .navigation{
@@ -121,21 +126,24 @@ main{
     color:white;
     position: relative;
     padding: 1rem;
-    
+    border-top: solid #d63a4a 6px;
     
 }
 .openNav{
-    padding: 2vw;
+    padding-top: 2vw;
+    padding-left: 2vw;
     font-size: 3vw;
     color: white;
     display: flex;
     justify-content: flex-start;
     position: relative;
-    top: 2vh;
+
 }
-.openNav:hover{
+.openNav i:hover{
     color: black;
 }
+
+
 .mainimg{
     position: relative;
     height: 100%;
@@ -189,11 +197,20 @@ main  p {
     min-height: 50vh;
     min-width: 50vw;
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 769px) {
     .img3{
         min-height: 100%;
         min-width: 100%;
     }
+    .openNav {
+    font-size: 18vw;
+        
+    }
+
+    .sidenav a{
+        font-size: 10vw;
+    }
+
 }
 
 
@@ -216,11 +233,11 @@ footer{
     padding:0;
     
 }
-footer img{ 
-    width: 2rem;
+footer i{ 
+    font-size: 2rem;
     padding-right: 2rem;
     margin-left: -0.5rem;
-
+    color: rgb(20, 20, 20);
    
 }
 .sidenav{
@@ -258,33 +275,138 @@ footer img{
 }
 .aboutus-grid{
     display: grid;
-    grid-template-columns: repeat(5,1fr) ;
-    grid-template-rows: repeat(3,1fr);
-    padding: 5%;
+    grid-template-columns: repeat(auto-fill, minmax(10vw, 17vw)) ;
+    grid-template-rows: repeat(auto-fill, minmax(10vh,25vh));
+    padding-left: 12%;
+    object-fit: cover;
+    break-inside: avoid;
+    grid-gap: 2rem;
+    position: relative;
 }
-.pers1{
-    grid-area: 1 / 1 / 2 / 2;
+.pers{
+    object-fit: cover;
+    height: 20vh;
+    width: 100%;
 }
-.pers2{
-    grid-area: 1 / 3 / 2 / 4;
+@media only screen and (max-width: 600px) {
+
+   body { 
+      font-size:3vw; 
+   }
+   
+
 }
-.pers3{
-    grid-area: 1 / 5 / 2 / 5;
+.apply{
+    display: flex;
+    position: relative;
+     justify-content: center;
+    
 }
-.pers4{
-    grid-area: 2 / 1 / 3 / 2;
+.apply a{
+    border-bottom: transparent solid 2px;
+    border-left: transparent solid 2px;
+    display: inline;
+    padding: 1rem;
+    color: white;
 }
-.pers5{
-    grid-area: 2 / 3 / 3 / 4;
+.apply a:hover{
+    transition-duration: 500ms;
+    border-bottom: black solid 2px;
+    border-left: black solid 2px;
+    font-size: 105%;
+    
+}
+.job{
+    display: grid;
+   grid-area: 1 / 1 / 1 / 2 ;
+}
+.job h2{
+    display: flex;
+
+}
+.job p{
+    display: flex;
+    text-align: start;
+    max-width: 50vw;
+    flex-direction: row;
+    margin: 0;    
+    
+}
+.job2{
+    grid-area: 1 / 3  / 1 / 3 ;
+}
+.job2 h2{
+    display: flex;
+}
+.job2 p{
+    display: flex;
+    text-align: start;
+    min-width:  50vw;
+    max-width: 100vw;
+    flex-direction: row;
+    margin: 0;  
+    padding-bottom: 2rem;  
+    border-bottom: #d63a4a solid 0.75vh;
+}
+.grid-job{
+    display: grid;
+    grid-template-columns: 1fr 0.1fr 1fr;
+    grid-template-rows: 1fr;
+
+}
+.break{
+    grid-area: 1 / 2 / 1 / 2;
+    border-right: 0.75vh solid #d63a4a;
+    margin-right: 2vw;
+}
+.contact-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(10vw,28vw)) ;
+    grid-template-rows: repeat(auto-fill, minmax(20vh,65vh));
+    padding-left: 10vw;
+    justify-self: center;
+}
+@media only screen and (max-width: 769px){
+    .contact-grid{
+    grid-template-rows: repeat(auto-fill, minmax(18vh,60vh)); 
+    grid-template-columns: repeat(auto-fill, minmax(10vw,35vw)) ;
+    }
+}
+.contact p{
+    text-align: start;
+    max-width: 100vw;
+    margin: 1rem auto;
+    display: flex;
+    flex-direction: column;
+}
+.map{
+    position: relative;
+    width: 20vw;
+    height: 40vh;
+}
+@media only screen and (max-width: 769px){
+    .map{
+        width: 60vw;
+        height: 30vh;
+    }
+
 }
 
-.pers6{
-    grid-area: 2 / 5 / 3 / 6;
+.contact{
+    position: relative;
+    object-fit: cover;
+    width: 100%;
+    height: 30vh;
 }
-.pers7{
-    grid-area: 3 / 2 / 4 / 3;
+.contact a{
+    text-decoration: none;
+    color: #d63a4a;
 }
-.pers8{
-    grid-area: 3 / 4 / 4 / 5;
+.contact a:hover{
+    text-decoration: none;
+    color: #b12d3a;
 }
-
+.contact i{
+padding-right: 1vw;
+font-size: 1.5rem ;
+}
