--- a/grid.css
+++ b/grid.css
@@ -53,6 +53,7 @@ a:visited{
     align-items: center;
     justify-content: center;
 }
+
 #main{
     margin:0;
     padding:0;
@@ -66,7 +67,25 @@ a:visited{
     align-items: center;
 
 }
+#arrow{
+    font-size: 4rem; ;
+    transition: 600ms;
+    display: flex;
+    justify-content: center;
+     transition: 400ms;
+}
+#arrow i:hover{
+    color:  #d63a4a ;
+    font-size: smaller;
+    transition: 300ms;
 
+}
+.header i{
+    color: white;
+    position:fixed;
+    transform-origin: left top;
+    top: 85vh;
+}
 .navigation{
     justify-content: flex-end;
     position: relative ;
@@ -138,7 +157,7 @@ main{
 .openNav{
     padding-top: 2vw;
     padding-left: 2vw;
-    font-size: 3rem;
+    font-size: 2rem;
     color: white;
     display: flex;
     justify-content: flex-start;
@@ -147,7 +166,7 @@ main{
 }
 .openNav i:hover{
     color: black;
-    font-size: 3.5rem;
+    font-size: 2.2rem;
     transition: 250ms   ;
 }
 
@@ -281,7 +300,7 @@ footer i:hover{
     position: absolute;
     top:0;
     right: 5vw;
-    font-size: 3vw;
+    font-size: 2rem;
     margin-left: 5vw;
 }
 #main{
@@ -411,6 +430,11 @@ footer i:hover{
     font-size: 1.5rem;
     background-color:#30436e ;
     padding: 0.7rem;
+}
+@media only screen and (max-width: 769px){
+    .contact .help-center{
+        font-size: 0.8rem;
+    }
 }
 .contact .help-center:hover{
    background-color: #1f2b46;
