commit on master

--- a/grid.css
+++ b/grid.css
@@ -53,6 +53,22 @@ a:visited{
     align-items: center;
     justify-content: center;
 }
+.header3{
+    position: relative ;
+    height: 60vh;
+    display: flex  ;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.header3 img{
+    display: flex;
+    width: 100%;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 #main{
     margin:0;
@@ -145,6 +161,7 @@ a:visited{
     
 }
 
+
 main{
     background: #263454;
     color:white;
@@ -162,7 +179,7 @@ main{
     display: flex;
     justify-content: flex-start;
     position: relative;
-
+    z-index: 1;
 }
 .openNav i:hover{
     color: black;
@@ -244,6 +261,7 @@ main  p {
 }
 
 
+
 .steam-flex{
     position: static ;
     display: flex;
@@ -279,7 +297,7 @@ footer i:hover{
     height: 100%;
     width: 0;
     position: fixed;
-    z-index:1;
+    z-index:2;
     top:0;
     left:0;
     background-color: #e0bd9f;
@@ -333,7 +351,8 @@ footer i:hover{
 .apply{
     display: flex;
     position: relative;
-     justify-content: center;
+    justify-content: center;
+
     
 }
 .apply a{
@@ -343,11 +362,14 @@ footer i:hover{
     display: inline;
     padding: 1rem;
     color: white;
+    background-color:#212c49;
 }
 .apply a:hover{
     transition-duration: 500ms;
-    border-bottom: black solid 0.3rem;
-    border-left: black solid 0.3rem;
+    border-bottom: #d63a4a solid 0.25rem;
+    border-left: #d63a4a solid 0.25rem;
+    border-right:#263454 solid 0.2rem ;
+    border-top:#263454 solid 0.2rem;
     font-size: 105%; 
 }
 .job{
@@ -440,7 +462,7 @@ footer i:hover{
 .contact .help-center:hover{
    background-color: #1f2b46;
    transition: 500ms;
-   font-size: 1.4rem;
+   font-size: 1.48rem;
 }
 .contact{
     position: relative;
